--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "Munib36.github.io/Munib36,"
   "name": "my-travel-journal",
   "private": true,
   "version": "0.0.0",
@@ -6,12 +7,12 @@
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
   "homepage": "https://munib36.github.io/my%20travel%20journal",
-    
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+    "predeploy": "npm run build", "deploy": "gh-pages -d build",
   },
   "dependencies": {
     "react": "^18.2.0",
