--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "Munib36.github.io/Munib36,"
+  "homepage": "Munib36.github.io/Munib36",
   "name": "my-travel-journal",
   "private": true,
   "version": "0.0.0",
@@ -11,7 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
     "predeploy": "npm run build", "deploy": "gh-pages -d build",
   },
   "dependencies": {
