--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
-  "homepage": "https://munib36.github.io/my%20travel%20journal",
+  "homepage": "https://munib36.github.io/mytraveljournal",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -27,6 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.0.0",
-    "vite": "^4.4.5"
-  }
+    "vite": "^4.4.5",
+  },
 }
