--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -7,11 +7,14 @@
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+      "preview": "vite preview",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+    },
+
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
