--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -12,7 +12,7 @@
       "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
       "preview": "vite preview",
       "predeploy": "npm run build",
-      "deploy": "gh-pages -d build"
+      "deploy": "gh-pages -d dist"
     },
 
   "dependencies": {
