--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -1,20 +1,19 @@
 {
-  "homepage": "https://munib36.github.io/mytraveljournal",
-  "name": "my-travel-journal",
+  “homepage”: "https://Munib36.github.io/mytraveljournal/",
+  "name": "mytraveljournal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
   "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-      "preview": "vite preview",
-      "predeploy": "npm run build",
-      "deploy": "gh-pages -d dist"
-    },
-
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
