--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -1,11 +1,12 @@
 {
-  “homepage”: "https://Munib36.github.io/mytraveljournal/",
+  "homepage": "https://Munib36.github.io/mytraveljournal/",
   "name": "mytraveljournal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
+    
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,6 +15,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
   },
+    
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -29,4 +31,5 @@
     "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
   }
+    
 }
