--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -6,16 +6,14 @@
   "type": "module",
   "predeploy": "npm run build",
   "deploy": "gh-pages -d build",
-    
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist"
   },
-    
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -31,5 +29,4 @@
     "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
   }
-    
 }
