--- a/mytraveljournal/package.json
+++ b/mytraveljournal/package.json
@@ -1,11 +1,8 @@
 {
-  "homepage": "https://Munib36.github.io/mytraveljournal/",
   "name": "mytraveljournal",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -28,5 +25,12 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "main": "dist/index.html",
+  "homepage": "https://munib36.github.io/mytraveljournal/"
 }
